<resources>
    <string name="app_name">CL-Launcher</string>


    <string name="home_title">Home Sample</string>
    <string name="show_all_apps">All</string>

    <!-- Home Menus -->
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>

    <!-- Wallpaper -->
    <string name="wallpaper_instructions">Tap picture to set portrait wallpaper</string>
    <string name="application">Curious Learning</string>

    <string name="share_launcher">Share CL Launcher</string>
    <string name="help">Help</string>
    <string name="setting">Settings</string>


    <string name="password_txt">Password</string>
    <string name="password_default">No-Lock</string>
    <string name="password_cl">CL-Password</string>
    <string name="password_android">Device Password</string>

    <string name="restrict_setting_screen">Restrict Settings</string>
    <string name="restrict_status_bar">Restrict Status bar</string>
    <string name="device_lock_string">CL-Launcher need to access followings for device lock.</string>
    <string name="network_error_text">Please check your network connection.</string>
    <string name="initializingTxt">Initializing ...</string>
    <string name="registeringTxt">Registering tablet...</string>
    <string name="downloading_in_progress">Downloading is in progress.</string>
    <string name="cl_db_name">CL_Launcher</string>
    <string name="cl_db">CL_DB</string>
    <string name="wifi_text">Set Wi-Fi</string>
    <string name="cl_launcher_update_text">Update Cl-Launcher</string>
    <string name="tablet_id">Tablet Id : </string>
    <string name="manifest_version">Manifest Version : </string>
    <string name="launcher_version">Launcher Version : </string>
    <string name="cleanup_app_start_string">Apps cleanup started.</string>
    <string name="cleanup_app_stop_string">Apps cleanup finished.</string>
    <string name="no_files_cleanup_txt">No files found for clean up.</string>
    <string name="start_cleanup_txt">Applications are put to download again.</string>
    <string name="cleanup_app_string">Apps Cleanup</string>
    <string name="download_failed">Download failed.</string>

    <string name="qr_code_scan_txt">ASSIGN DEPLOYMENT</string>
    <string name="qr_code_scan_txt_msg">You will need a partners.curiouslearning.org login to use this feature</string>
    <string name="invalid_json">Invalid result from QR code.</string>
    <string name="end_point">End Point :</string>
    <string name="error_with_manifest">Something went wrong in manifest data.</string>
 <string name="explanation_access_to_appusage_is_not_enabled">Failed to retrieve app usage
        statistics. You may need to enable access
        for this app through Settings > Security > Apps with usage access
    </string>
    <string name="manifest_version_error">Manifest Version Error.</string>
    <string name="instaling">Installing... Please wait.</string>
    <string name="change_default_home_dialog_cancel">Cancel</string>
    <string name="change_default_home_dialog_proceed">Proceed</string>

</resources>
