<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/home_bag"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/menu_setting"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:drawablePadding="30dp"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_action_setting"
        android:textSize="@dimen/option_item_text_size"/>

    <TextView
        android:id="@+id/menu_share"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_launcher"
        android:textColor="@color/black"
        android:drawablePadding="30dp"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_action_share"
        android:textSize="@dimen/option_item_text_size"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/menu_help"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textColor="@color/black"
        android:drawablePadding="30dp"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:drawableLeft="@drawable/ic_action_help"
        android:textSize="@dimen/option_item_text_size"/>

</LinearLayout>
